--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,33 +24,42 @@ a {
     align-items: center;
     justify-content: space-between;
     padding: 2.5% 5%;
+    border-bottom: 1px solid #0b5f5a;
 }
-.log{
+
+.log {
     margin-right: 10%;
 }
+
 .logo {
     width: 32vmin;
 }
-.nav{
+
+.nav {
     display: flex;
     align-items: center;
 }
-.navlinks{
+
+.navlinks {
     display: flex;
     align-items: center;
 }
-.navlinks a{
+
+.navlinks a {
     width: max-content;
     font-size: 3.3vmin;
     padding: 0px 1.5vmin;
 }
-.active{
+
+.active {
     font-weight: 900;
 }
-.navlinks a:hover{
+
+.navlinks a:hover {
     font-weight: 700;
 }
-.sub{
+
+.sub {
     max-width: 200px;
     font-size: 3vmin;
     font-weight: 500;
@@ -61,49 +70,60 @@ a {
     letter-spacing: 0.2px;
     border-radius: 26px;
 }
-.sub:hover{
+
+.sub:hover {
     opacity: 0.7;
 }
-section{
+
+section {
     padding-top: 10%;
     padding-right: 10%;
     padding-left: 10%;
 }
-.sect1{
+
+.sect1 {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin-top: 1%;
+    flex-direction: column;
     align-items: center;
     margin-bottom: 3%;
+    min-height: 50vh;
 }
-.sect1 h1{
+
+.sect1 h1 {
     font-size: 6.5vmin;
 }
-.sect1 h5{
+
+.sect1 h5 {
     color: #0b5f5a;
     font-weight: 600;
     font-size: 3.5vmin;
 }
-.sect1 div{
+
+.sect1 div {
     margin-top: 3.5%;
     text-align: center;
     padding: 0.5%;
     margin-right: 3%;
 }
-.img1{
-    height: 55vmin;
+
+.img1 {
+    height: 50vmin;
 }
 
-.sect2{
+.sect2 {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
-.sect2 h1{
+
+.sect2 h1 {
     font-size: 6vmin;
     letter-spacing: 0.3vmin;
 }
-.shadowbox{
+
+.shadowbox {
     margin-top: 1%;
     display: flex;
     align-items: center;
@@ -116,11 +136,13 @@ section{
     padding-bottom: 2.5%;
     border-radius: 1vmin;
 }
-.shadowbox div{
+
+.shadowbox div {
     padding: 1%;
     margin-left: 4%;
 }
-.shadowbox div h5{
+
+.shadowbox div h5 {
     font-size: 3.5vmin;
     font-weight: 500;
     color: #0b5f5a;
@@ -128,30 +150,37 @@ section{
     text-align: justify;
     line-height: 130%;
 }
-.shadowbox div h5 span{
+
+.shadowbox div h5 span {
     font-weight: 600;
 }
-.feature1{
+
+.feature1 {
     margin-top: 3%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
-.feature1 div{
+
+.feature1 div {
     padding: 3% 5% 0 5%;
 }
-.fet2{
+
+.fet2 {
     margin-top: 10%;
 }
-.features{
+
+.features {
     margin-top: 10%;
 }
-.features h1{
+
+.features h1 {
     font-size: 4.5vmin;
     letter-spacing: normal;
     margin-bottom: 7%;
 }
-.features h5{
+
+.features h5 {
     font-size: 3vmin;
     color: #0b5f5a;
     line-height: 135%;
@@ -159,29 +188,115 @@ section{
     letter-spacing: 0.5px;
 }
 
+#scrollButton {
+    margin-top: 20%;
+    width: 10vmin;
+    height: 10vmin;
+    cursor: pointer;
+}
+
+@keyframes scrollAnimation {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-10px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
+#scrollButton {
+    animation: scrollAnimation 1s infinite;
+}
+
+footer{
+    position: relative;
+    bottom: 0px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+    margin-top: 15vmin;
+}
+hr.rounded{
+    width: 90%;
+    border-top: 1px solid #000000; 
+}
+.flinks{
+    width: 100%;
+    padding: 0px 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.flinks a{
+    text-decoration: none;
+    padding: 0px 10px;
+    font-size: 3vmin;
+}
+.flinks a:hover{
+    font-weight: bold;
+    text-decoration: underline;
+}
+.flinks span{
+    margin: 40px 7.3% 20px 7.3%;
+}
+.socialic{
+    width: 22px;
+    height: 22px;
+}
+.socialic:hover{
+    opacity: 0.7;
+}
+.fsoc{
+    margin-left: 7.3%;
+    margin-bottom: 20px;
+    align-self: flex-start;
+}
+.fsoc a{
+    margin-left: 10px;
+}
+.fsoc a:hover{
+    font-weight: 900;
+}
+
+
+
 @media only screen and (max-width: 600px) {
-    .log{
+    .log {
         margin-right: 5%;
     }
+
     .sect1 {
         margin-top: 15%;
+        min-height: 50vh;
+        align-items: center;
     }
-    .sect2 h1{
+
+    .sect2 h1 {
         text-align: center;
     }
-    .shadowbox{
+
+    .shadowbox {
         padding-right: 7%;
         padding-top: 4%;
         padding-bottom: 4%;
         padding-left: 7%;
     }
-    .shadowbox div h5{
+
+    .shadowbox div h5 {
         line-height: normal;
     }
-    .img1{
-        height: 50vmin;
+
+    .img1 {
+        height: 45vmin;
     }
-    .features h5{
+
+    .features h5 {
         font-size: 2.5vmin;
         line-height: 100%;
     }
