--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,14 @@
     color: #000000;
     font-family: 'Roboto', sans-serif;
     padding: 0;
+    margin: 0;
+}
+
+body {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 a {
@@ -77,8 +85,7 @@ a {
 
 section {
     padding-top: 10%;
-    padding-right: 10%;
-    padding-left: 10%;
+    margin: 0 10% 0 10%;
 }
 
 .sect1 {
@@ -89,6 +96,7 @@ section {
     align-items: center;
     margin-bottom: 3%;
     min-height: 50vh;
+    overflow-x: hidden;
 }
 
 .sect1 h1 {
@@ -129,15 +137,21 @@ section {
     align-items: center;
     flex-direction: row-reverse;
     justify-content: space-between;
+    background-color: #d0f2f3;
     box-shadow: 1px 3px 2px 3px #d3d2d270;
     padding-left: 10%;
     padding-right: 10%;
     padding-top: 2.5%;
     padding-bottom: 2.5%;
-    border-radius: 1vmin;
+    border-radius: 2.5vmin;
+}
+
+.shadowbox img {
+    background-color: #d0f2f3;
 }
 
 .shadowbox div {
+    background-color: #d0f2f3;
     padding: 1%;
     margin-left: 4%;
 }
@@ -146,6 +160,7 @@ section {
     font-size: 3.5vmin;
     font-weight: 500;
     color: #0b5f5a;
+    background-color: #d0f2f3;
     font-style: normal;
     text-align: justify;
     line-height: 130%;
@@ -153,6 +168,7 @@ section {
 
 .shadowbox div h5 span {
     font-weight: 600;
+    background-color: #d0f2f3;
 }
 
 .feature1 {
@@ -169,10 +185,17 @@ section {
     padding: 3% 5% 0 5%;
 }
 
-.fet2{
+.fet2 {
     background-color: #ecf3f2;
-} 
-.fet2 div, .fet2 h1, .fet2 h5{
+}
+
+.fet2 img {
+    background-color: #ecf3f2;
+}
+
+.fet2 div,
+.fet2 h1,
+.fet2 h5 {
     background-color: #ecf3f2;
 }
 
@@ -219,44 +242,71 @@ section {
     animation: scrollAnimation 1s infinite;
 }
 
-.sect3{
+.sect3 {
     background-color: #ebf3f2;
     width: 100%;
     margin-top: 5vmin;
     padding-bottom: 14vmin;
-    display: flex;
-    align-items: center;
 }
-.scrtxt, .scrtxt h4, .scrtxt h2, .staytuned form{
+
+.scrtxt {
+    padding: 0 5% 0 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+
+.scrtxt,
+.scrtxt h4,
+.scrtxt h2,
+.staytuned form {
     background-color: #ebf3f2;
 }
-.scrtxt h2{
+
+.scrtxt h2 {
     font-weight: 700;
     font-size: 4.5vmin;
     text-transform: capitalize;
 }
-.staytuned{
+
+.staytuned {
     background-color: #ebf3f2;
     width: 100%;
     display: flex;
     flex-direction: row;
-    align-items:start;
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.staytuned input{
-    margin: 1.6vmin;
-    padding: 1.6vmin 3.2vmin ;
+.staytuned form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-right: 10%;
+}
+
+.staytuned h4 {
+    font-size: 3.2vmin;
+    width: max-content;
+    margin-right: 5%;
+}
+
+.staytuned input {
+    margin: 1.6vmin 2vmin 1.6vmin 0;
+    padding: 1.6vmin 3vmin;
     color: #000000;
     font-weight: 500;
     letter-spacing: 0.16vmin;
-    font-size: 2.88vmin;
+    font-size: 2.3vmin;
+    width: 30vmin;
     background-color: #ffffff;
     border: 0.45vmin solid #0b5f5a;
     border-radius: 1vmin;
 }
-.staytuned button{
-    margin: 1.6vmin;
+
+.staytuned button {
+    margin: 1.6vmin 0 1.6vmin 0;
+    width: max-content;
     padding: 1.6vmin 3.2vmin;
     font-weight: 500;
     letter-spacing: 0.16vmin;
@@ -267,51 +317,64 @@ section {
     color: #ffffff;
 }
 
-footer{
+footer {
+    width: 100%;
     align-items: center;
     display: flex;
     flex-direction: column;
     margin-bottom: 15px;
 }
-hr.rounded{
+
+hr.rounded {
     width: 90%;
-    border-top: 1px solid #000000; 
+    border-top: 1px solid #000000;
 }
-.flinks{
-    width: 100%;
-    padding: 0px 5px;
+
+.flinks {
+    width: 90%;
+    padding: 0px 5%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
-.flinks a{
+
+.flinks a {
     text-decoration: none;
-    padding: 0px 10px;
+    width: max-content;
+    padding: 0px 1vmin;
     font-size: 3vmin;
 }
-.flinks a:hover{
+
+.flinks a:hover {
     font-weight: bold;
     text-decoration: underline;
 }
-.flinks span{
-    margin: 40px 7.3% 20px 7.3%;
+
+.flinks span {
+    margin: 6.2vmin 0 3.5vmin 3%;
 }
-.socialic{
-    width: 22px;
-    height: 22px;
+
+.socialic {
+    width: 3.5vmin;
+    height: 3.5vmin;
 }
-.socialic:hover{
+
+.socialic:hover {
     opacity: 0.7;
 }
-.fsoc{
+
+.fsoc {
     margin-left: 7.3%;
     margin-bottom: 20px;
     align-self: flex-start;
 }
-.fsoc a{
+
+.fsoc a {
     margin-left: 10px;
+    font-size: 3vmin;
 }
-.fsoc a:hover{
+
+.fsoc a:hover {
     font-weight: 900;
 }
 
